--- a/css/taboo.css
+++ b/css/taboo.css
@@ -57,7 +57,7 @@ body {
     text-align: center;
     padding: 20px 10px;
     width: 210px;
-    display: inline-block;s
+    display: inline-block;
     border-radius: 15px;
     font-size: 30px;
     font-weight: 500;
